basic index.html added wuth less.js

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,24 @@
-Test test test
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Web 1920 – 1</title>
+</head>
+<body>
+<div id="Web_1920__1">
+	<div id="Find_the_cheapest_games_on_the">
+		<span>Find the cheapest games on the internet</span>
+	</div>
+	<svg class="Rectangle_1">
+		<rect id="Rectangle_1" rx="0" ry="0" x="0" y="0" width="867" height="124">
+		</rect>
+    </svg>
+	<div id="Type_the_game_name">
+		<p><input type="text" value="asd"></input></p>
+	</div>
+</div>
+</body>
+</html>
