basic navbar added

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,22 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Main Page</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Gamesearch</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Current deals</a>
+                </li>
+            </ul>
+        </div>
     </div>
     </nav>
 </body>
