search box added

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,12 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="https://2u.si/uboemu7v.png">
+            <div class="carousel-caption">
+                <h1 class="display-2">Search for a game</h1>
+                <div class="input-group input-group-lg">
+                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                  </div>
+            </div>
         </div>
         <div class="carousel-item">
             <img src="https://2u.si/kltl34i4.png">
