--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -56,5 +57,37 @@
         </div>
     </div>
 </div>
+
+<div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">What you can use this site for</h1>
+        </div>
+        <hr>
+        <div class="col-12">
+            <p class="lead">Valami rövid leírás ide</p>
+        </div>
+    </div>
+</div>
+<div class="container-fluid padding">
+    <div class="row text-center padding">
+        <div class="col-xs-12 col-sm-6 col-md 4">
+            <i class="fa fa-bell"></i>
+            <h3>FREE GAMES</h3>
+            <p>Get infos about the latest games that wen free for a limited time</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md 4">
+            <i class="fa fa-facebook"></i>
+            <h3>FREE GAMES</h3>
+            <p>Get infos about the latest games that wen free for a limited time</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md 4">
+            <i class="fa fa-adn"></i>
+            <h3>FREE GAMES</h3>
+            <p>Get infos about the latest games that wen free for a limited time</p>
+        </div>
+    </div>
+</div>
+<hr class="my-4">
 </body>
 </html>
