--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="stylesheets/style.css" />
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
@@ -36,24 +37,17 @@
 <div id="slides" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#slides" data-slide-to="0" class ="active"></li>
-        <li data-target="#slides" data-slide-to="1"></li>
-        <li data-target="#slides" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://2u.si/uboemu7v.png">
+            <img src="https://2u.si/s7a4x4v4.jpg">
+            <div class="layer"></div>
             <div class="carousel-caption">
                 <h1 class="display-2">Search for a game</h1>
                 <div class="input-group input-group-lg">
                     <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
                   </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <img src="https://2u.si/kltl34i4.png">
-        </div>
-        <div class="carousel-item">
-            <img src="https://2u.si/1j3f0a9v.png">
         </div>
     </div>
 </div>
