--- a/public/index.html
+++ b/public/index.html
@@ -45,13 +45,12 @@
             <div class="carousel-caption">
                 <h1 class="display-2">Search for a game</h1>
                 <div class="input-group input-group-lg">
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="test">
                   </div>
             </div>
         </div>
     </div>
 </div>
-
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
