--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
             <div class="carousel-caption">
                 <h1 class="display-2">Search for a game</h1>
                 <div class="input-group input-group-lg">
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="test">
+                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="test" spellcheck="false">
                   </div>
             </div>
         </div>
